--- a/dashboard-ui/public/index.html
+++ b/dashboard-ui/public/index.html
@@ -17,7 +17,7 @@
     <title>Tanzania</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div gid="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
